# mlx-llm

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  PYPI.md  README.md  pyproject.toml
benchmarks/: benchmark.csv
demo/: llama_chat.py  llm_chat.py  personality.py
docs/: models.md
examples/: README.md  llm_chat.py  personality.py
examples/chat/: chat_llm.py  personality.py
examples/rag/: create_kb.py  rag_llm.py
examples/rag/data/: kohesio_PO_budget_0-10000.json  kohesio_PO_budget_0-10000_topics.csv
results/: benchmark.csv
scripts/: benchmark.sh  run_bench.py
src/mlx_llm/bench/: __init__.py  bench.py
src/mlx_llm/chat/: __init__.py  base.py  chat.py  llama.py  mistral.py  phi2.py  teknium.py  tiny_llama.py  utils.py
src/mlx_llm/data/: kb.py  loader.py  rag.py
src/mlx_llm/model/: __init__.py  _config.py  _convert.py  _factory.py  _registry.py  _utils.py  bert.py  config.py  converter.py  llm.py  model.py  phi2.py  transformer.py  utils.py
src/mlx_llm/model/llama/: __init__.py  chat.py  config.py  llama.py  model.py
src/mlx_llm/model/llm/: base.py
src/mlx_llm/model/mistral/: chat.py  config.py
src/mlx_llm/playground/: __init__.py  chat.py  llm.py
src/mlx_llm/playground/chat/: __init__.py  _core.py  tokenizer.py
src/mlx_llm/playground/chat/template/: __init__.py  _chat.py  base.py  llama.py  mistral.py  phi2.py  teknium.py  tiny_llama.py
src/mlx_llm/playground/rag/: __init__.py  data.py  model.py  teknium.py  vector.py
src/mlx_llm/playground/rag/data/: __init__.py  rag.py
src/mlx_llm/playground/rag/db/: __init__.py  vector.py
src/mlx_llm/playground/rag/embed/: model.py
src/mlx_llm/prompt/: __init__.py  _base.py  gemma.py  hermes.py  llama.py  mistral.py  openelm.py  phi.py
src/mlx_llm/tokenizer/: __init__.py  chat.py  tokenizer.py
src/mlx_llm/utils/: __init__.py  hf.py  session.py  time.py  weights.py
